# BSEC-Arduino-library

./: CMakeLists.txt
src/: bsec.cpp  bsec.h
src/bme68x/: CMakeLists.txt
